@@ -3,52 +3,12 @@
 <KDevPrjSession>
  <LastCompileConfig>(Default)</LastCompileConfig>
  <Mainframe MaximizeMode="1" />
- <DocsAndViews NumberOfDocuments="9" >
-  <Doc0 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rkpluginwidget.h" >
-   <View0 line="27" Type="???" >
-    <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
+ <DocsAndViews NumberOfDocuments="1" >
+  <Doc0 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/TODO" >
+   <View0 line="0" Type="???" >
+    <AdditionalSettings Top="2" Width="954" Attach="1" Height="538" Left="2" MinMaxMode="0" />
    </View0>
   </Doc0>
-  <Doc1 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rkpluginwidget.cpp" >
-   <View0 line="34" Type="???" >
-    <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
-   </View0>
-  </Doc1>
-  <Doc2 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rkplugin.cpp" >
-   <View0 line="200" Type="???" >
-    <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
-   </View0>
-  </Doc2>
-  <Doc3 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rktext.h" >
-   <View0 line="28" Type="???" >
-    <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
-   </View0>
-  </Doc3>
-  <Doc4 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rktext.cpp" >
-   <View0 line="24" Type="???" >
-    <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
-   </View0>
-  </Doc4>
-  <Doc5 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rkvarselector.cpp" >
-   <View0 line="28" Type="???" >
-    <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
-   </View0>
-  </Doc5>
-  <Doc6 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rkplugin.h" >
-   <View0 line="107" Type="???" >
-    <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
-   </View0>
-  </Doc6>
-  <Doc7 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rkcheckbox.cpp" >
-   <View0 line="0" Type="???" >
-    <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
-   </View0>
-  </Doc7>
-  <Doc8 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/TODO" >
-   <View0 line="0" Type="???" >
-    <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
-   </View0>
-  </Doc8>
  </DocsAndViews>
  <pluginList>
   <kdevbookmarks>
